# solana-restaking-aggregator

./: .gitignore  Anchor.toml  Cargo.toml  README.md  buffer-signer.json  generate-test-genesis.sh  package.json
programs/just-hold-strategy-example/: Cargo.toml
programs/just-hold-strategy-example/src/: constants.rs  error.rs  events.rs  lib.rs  util.rs
programs/just-hold-strategy-example/src/instructions/: mod.rs
programs/just-hold-strategy-example/src/instructions/admin/: initialize.rs
programs/just-hold-strategy-example/src/instructions/cranks/: mod.rs  update_lst_amount.rs
programs/just-hold-strategy-example/src/state/: common_vault_strategy_state.rs  mod.rs
programs/mp-sol-restaking/: Cargo.toml
programs/mp-sol-restaking/src/: constants.rs  error.rs  events.rs  lib.rs  util.rs
programs/mp-sol-restaking/src/instructions/: create_secondary_vault.rs  initialize.rs  mod.rs  update_vault_token_sol_price.rs
programs/mp-sol-restaking/src/instructions/admin/: attach_common_strategy_state.rs  configure_main_vault.rs  configure_secondary_vault.rs  create_secondary_vault.rs  init_metadata.rs  initialize.rs  mod.rs  remove_freeze_auth.rs
programs/mp-sol-restaking/src/instructions/cranks/: get_lst_from_strat.rs  mod.rs  set_next_withdraw_amount.rs  transfer_lst_to_strat.rs  update_attached_strat_lst_amount.rs  update_vault_ticket_target.rs  update_vault_token_sol_price.rs  verify_treasury_account.rs
programs/mp-sol-restaking/src/instructions/users/: mod.rs  stake.rs  ticket_claim.rs  unstake.rs
programs/mp-sol-restaking/src/state/: main_vault.rs  marinade_pool_interface.rs  mod.rs  secondary_vault.rs  spl_stake_pool_interface.rs  unstake_ticket.rs  vault_strategy_relation_entry.rs
programs/shared-lib/: Cargo.toml
programs/shared-lib/src/: lib.rs
res/: mp_sol_restaking.json  mp_sol_restaking.ts
scripts/: build-verifiable.sh  verify-remote.sh
scripts/devnet/: anchor-deploy.sh  deploy.sh  program-extend.sh  retry-deploy.sh
scripts/mainnet/: anchor-deploy.sh  build-verifiable.sh  deploy.sh  program-extend.sh  program-write-buffer.sh  retry-deploy.sh  retry-write-buffer.sh  verify-exec-vs-buffer.sh  verify-exec-vs-program.sh
test-genesis/: generate.sh  get-program-data.js  get-program-data.ts  take-test-mint-auth.js  take-test-mint-auth.ts
tests/: maint-test.ts  mp-sol-restaking.ts
tests/util/: mint.ts  spl-token-mint-helpers.ts
ts/: constants.ts
ts/init/: init-devnet.ts
