[workspace.package]
version = "0.0.1"
authors = ["Lucio Tato <lucio@metapool.app>"]
edition = "2021"

[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = { version = "0.30.0" }
anchor-spl = {version = "0.30.0"}
solana-program = "*"
borsh = "*"
