[package]
name = "just-hold-strategy-example"
version = "0.1.0"
description = "mpSOL restaking yield agregator - just-hold strategy example"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "just_hold_strategy_example"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
borsh = { workspace = true }
#shared_lib = { path = "../shared-lib" }