[package]
name = "mp-sol-restaking"
version = "0.1.0"
description = "mpSOL restaking yield aggregator - The best yield aggregator on Solana. Built for smart stakers who like money"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mp_sol_restaking"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true, features = ["metadata"] }
solana-program = { workspace = true }
borsh = { workspace = true }
shared_lib = { path = "../shared-lib" }
solana-security-txt = "1.1.1"
