[package]
name = "shared_lib"
version = "0.1.0"
description = "Shared lib for mpSOL restaking yield aggregator - just-hold strategy example"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shared_lib"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
# anchor-spl = { workspace = true }
# solana-program = { workspace = true }
# borsh = { workspace = true }